# quantumviz

./: .gitignore  AGENTS.md  CITATION.cff  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: api.rst  conf.py  index.rst  installation.rst
examples/: README_QAOA.md  README_VQE.md  qaoa_maxcut_2qubit.json  qaoa_maxcut_triangle.json  vqe_h2.json  vqe_lih.json
src/quantumviz/: __init__.py  bloch_multivector.py  bloch_sphere.py  circuit_diagram.py  cli.py  cost_landscape.py  dcn.py  dynamic_flow.py  hinton.py  paulivec.py  qbeads.py  qiskit_bridge.py  state_city.py
src/quantumviz/dashboard/: main.py
src/quantumviz/dashboard/frontend/: index.html
src/quantumviz/dashboard/results/: result_20260502_114444.json
src/quantumviz/gui/: __init__.py  code_editor_widget.py  controls_widget.py  display_widget.py  main_window.py  workers.py
tests/: __init__.py  conftest.py  test_bloch_multivector.py  test_cli.py  test_cost_landscape.py  test_dashboard.py  test_dcn.py  test_gui.py  test_hinton.py  test_paulivec.py  test_qbeads.py  test_qiskit_bridge.py
